// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Skeleton > Skeleton theme x density > matches the dark / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="dark"
>
  <div
    aria-hidden="true"
    class="rh-skeleton-group"
  >
    <div
      class="rh-skeleton"
      data-motion="full"
      data-shape="text"
    />
    <div
      class="rh-skeleton"
      data-motion="full"
      data-shape="text"
      style="width: 60%;"
    />
  </div>
</div>
`;

exports[`Skeleton > Skeleton theme x density > matches the dark / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="dark"
>
  <div
    aria-hidden="true"
    class="rh-skeleton-group"
  >
    <div
      class="rh-skeleton"
      data-motion="full"
      data-shape="text"
    />
    <div
      class="rh-skeleton"
      data-motion="full"
      data-shape="text"
      style="width: 60%;"
    />
  </div>
</div>
`;

exports[`Skeleton > Skeleton theme x density > matches the light / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="light"
>
  <div
    aria-hidden="true"
    class="rh-skeleton-group"
  >
    <div
      class="rh-skeleton"
      data-motion="full"
      data-shape="text"
    />
    <div
      class="rh-skeleton"
      data-motion="full"
      data-shape="text"
      style="width: 60%;"
    />
  </div>
</div>
`;

exports[`Skeleton > Skeleton theme x density > matches the light / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="light"
>
  <div
    aria-hidden="true"
    class="rh-skeleton-group"
  >
    <div
      class="rh-skeleton"
      data-motion="full"
      data-shape="text"
    />
    <div
      class="rh-skeleton"
      data-motion="full"
      data-shape="text"
      style="width: 60%;"
    />
  </div>
</div>
`;
